# synthia

./: README.md  pyproject.toml
src/: app.tcss  components.py  main.py  sound.py
